fix board list on mobile; add step forward/backward buttons to time travel

--- a/dapp/src/assets/styles/components.scss
+++ b/dapp/src/assets/styles/components.scss
@@ -101,3 +101,11 @@
 .dchan-post-you {
     border: 2px dashed var(--tertiary) !important;
 }
+
+.dchan-brackets::before {
+    content: "[";
+}
+
+.dchan-brackets::after {
+    content: "]";
+}
